--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ dist/
 *.log  
   
 # 忽略node_modules目录（如果你的项目使用了npm或yarn）  
-node_modules/  
+wx/node_modules  
   
 # 忽略开发工具的配置文件  
 # project.config.json  
